<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".Design.Ui.Activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/welcomeLogo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/books_my_friend_logo" />

        <TextView
            android:id="@+id/welcomeSlogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/hind_regular"
            android:text="@string/sloganApplicationText"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/developerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:text="@string/fromText"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="normal"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:text="@string/companyNameText"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>