<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:hint="@string/enterFullNameText"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilFullName"
        android:layout_marginVertical="5dp"
        android:hint="@string/enterEmailMobileText"
        app:helperText="@string/outSiteBdSmgText"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:inputType="textWebEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>