<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:hint="@string/emailMobileUsernameText"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:inputType="textWebEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilUsername"
        android:layout_marginVertical="5dp"
        android:hint="@string/passwordText"
        app:helperTextEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:inputType="textWebPassword|textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/hind_regular"
        android:text="@string/forgottenPasswordText"
        android:textAlignment="textEnd"
        android:textStyle="bold" />

    <com.sopnolikhi.booksmyfriend.Design.Ui.Custom.AnimationButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_marginTop="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount"
        style="?attr/materialIconButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anek_bangla_regular"
        android:text="@string/signUpText"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>