<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/userPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hind_regular"
        android:text="@string/createPasswordText"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPasswordText"
        android:layout_marginVertical="5dp"
        android:hint="@string/enterNewPasswordText"
        app:helperTextEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:inputType="textWebPassword|textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConformPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_marginVertical="5dp"
        android:hint="@string/confirmPasswordText"
        app:helperTextEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConformPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_regular"
            android:inputType="textWebPassword|textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>