<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Design.Ui.Fragments.Authentication.SignUp.SignUpGenderFragment">

    <ImageView
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitStart"
        android:src="@drawable/shape" />

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        app:drawableStartCompat="@drawable/ic_left_icon"
        app:drawableTint="?attr/colorSecondary" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/next_button"
        android:layout_below="@id/backButton">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:fontFamily="@font/hind_bold"
                    android:text="@string/commonCreateAccountText"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:fontFamily="@font/hind_bold"
                    android:text="@string/step3_4Text"
                    android:textAlignment="center"
                    android:textSize="25sp" />

            </LinearLayout>

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/linearLayout"
                android:background="?attr/colorOutline" />

            <include
                android:id="@+id/includeGender"
                layout="@layout/inc_design_signup_form_gander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_line"
                android:layout_marginTop="16dp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <com.sopnolikhi.booksmyfriend.Design.Ui.Custom.AnimationButton
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="16dp" />

</RelativeLayout>